--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Messages go here.</h1>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li><Contact</li>
+    </ul>
 
 <button id="myButton">Click Me!</button>
 <script src="./js/app.js" charset="utf-8">
