--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Events Intro</title>
+    <style>
+    ul, li {
+      display:inline-block;
+      list-style: none;
+    }
+    </style>
+
   </head>
   <body>
     <h1>Messages go here.</h1>
     <ul>
       <li>Home</li>
       <li>About</li>
-      <li><Contact</li>
+      <li>Contact</li>
     </ul>
 
 <button id="myButton">Click Me!</button>
