add blue background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       display:inline-block;
       list-style: none;
     }
+    body {
+      background-color: blue;
+    }
     </style>
 
   </head>
