--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     body {
       background-color: blue;
     }
+    h1 {
+      font-family: cursive;
+      font-size: 23px;
+    }
     </style>
 
   </head>
